implementing create delete and update

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,20 @@ body {
 a {
   color: #00B7FF;
 }
+
+#skill-name{
+  font-size: x-large;
+  font-weight: bolder;
+}
+
+ul{
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  
+}
+li{
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
