--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/stylesheets/style.css">
-  <title><%= title %></title>
+  <title>skills sheet</title>
 </head>
 <body>
-  <h1><%= title %></h1>
+  <h1><a href="./skills/index">go to List</a></h1>
+</ul>
 </body>
 </html>
